[project]
name = "next-visit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "fiona>=1.9",
    "mapbox-vector-tile>=2.0",
    "pydantic>=2.12.5",
    "shapely>=2.0",
    "uvicorn>=0.30",
]
