[project]
name = "next-visit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "contextily>=1.7.0",
    "duckdb>=1.0",
    "fastapi>=0.115",
    "fiona>=1.9",
    "geopandas>=1.1.3",
    "japanize-matplotlib>=1.1.3",
    "mapbox-vector-tile>=2.0",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "setuptools>=82.0.1",
    "shapely>=2.0",
    "uvicorn>=0.30",
]
